<resources>
    <string name="app_name">My Application</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="bottom">下</string>
    <string name="right">右</string>
    <string name="center">中</string>
    <string name="left">左</string>
    <string name="top">上</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>