<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:layout_weight="1"
        android:textAlignment="center"

        android:background="#00eeee"
        android:layout_margin="8dp"
        android:text="@string/top"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="8dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:background="#00eeee"
            android:gravity="center"
            android:textSize="48sp"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_margin="8dp"

            android:text="@string/left" />

        <TextView
            android:id="@+id/textView4"
            android:background="#00eeee"
            android:gravity="center"
            android:textSize="48sp"
            android:layout_margin="8dp"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/center" />

        <TextView
            android:id="@+id/textView5"
            android:background="#00eeee"
            android:gravity="center"
            android:textSize="48sp"
            android:layout_margin="8dp"
            android:textAlignment="center"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/right" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:background="#00eeee"
        android:gravity="center"
        android:textSize="48sp"
        android:layout_margin="8dp"
        android:textAlignment="center"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/bottom" />

</LinearLayout>